# Electrically-supported-fishing-rod

./: .checkpatch.conf  .gitmodules  CODEOWNERS  README.md
.github/workflows/: compliance.yml  requirements-ci.txt  snyk.yml
EE_schematic/: README.md
EE_schematic/bottom_PCB/: Schlib1.SchLib  ekran_pcb.step  pakiet.PrjPcb  pakiet.PrjPcbStructure  pakiet_schemat.SchDoc
EE_schematic/pakiet_PCB/: 5V2A schemat.SchDoc  5V2A.PcbDoc  BMS.PcbDoc  BMS.SchDoc  BMS.step  PcbLib1.CMP  ekran_pcb.PcbDoc  pakiet.PrjPcb  pakiet.PrjPcbStructure  pakiet_schemat.SchDoc
EE_schematic/upper_PCB/: Projekt_wędka.PrjPcb  Projekt_wędka.PrjPcbStructure  TB67S249FTG P-VQFN48-0707-0.50-004.SLDPRT  Wedka_Schlib.SchLib  Wedka_schemat.SchDoc  thumbdrive_housing.scad
UML_Diagram/: SystemDiagram.wsd
src_DriverHostapp/: App.axaml  App.axaml.cs  DriverHostapp.csproj  NLog.config  Program.cs  README.md  app.manifest
src_DriverHostapp/Assets/: README.md
src_DriverHostapp/Backend/: CallbackBT.cs  CallbackInterface.cs  CallbackSerialShell.cs
src_app/: .gitignore  .gitignore.txt  Program.cs
src_firmware/: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  prj.conf
src_firmware/boards/: nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay
src_firmware/src/: bas_gatt.c  bas_gatt.h  ble_gatt.c  ble_gatt_service.c  ble_gatt_service.h  button.c  button.h  driver.c  driver.h  hrs_gatt.c  hrs_gatt.h  main.c  return_codes.h  shell.c  storage.c  storage.h
src_mvp_app/: .gitignore  bluetoothclient.py  repl.py  requirements.txt
(+40 files in other folders)
